# mprpc

./: CMakeLists.txt  autobuild.sh  readme.md
example/: friend.pb.cc  friend.pb.h  friend.proto  user.proto
example/callee/: CMakeLists.txt  UserService.cc  friendservice.cc
example/caller/: CMakeLists.txt  callUserService.cc  callfriendservice.cc
src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcheader.proto  rpcprovider.cc  zookeeperutil.cc
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcheader.pb.h  rpcprovider.h  zookeeperutil.h
test/protobuf/: main.cc  test  test.pb.cc  test.pb.h  test.proto
